@@ -1,13 +1,12 @@
 package com.zw.oauth.util;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 import javax.crypto.Cipher;
 import javax.crypto.SecretKey;
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.DESKeySpec;
 import java.security.SecureRandom;
+import java.util.Base64;
 
 public class DESUtils {
     protected static final String KEY = "ScAKC0XhadTHT3Al0QIDAQAB";
@@ -16,7 +15,7 @@ public class DESUtils {
     }
 
     protected static String encrypt(String data, String key) {
-        String encryptedData = null;
+        String encryptedData ;
 
         try {
             SecureRandom sr = new SecureRandom();
@@ -25,7 +24,7 @@ public class DESUtils {
             SecretKey secretKey = keyFactory.generateSecret(deskey);
             Cipher cipher = Cipher.getInstance("DES");
             cipher.init(1, secretKey, sr);
-            encryptedData = (new BASE64Encoder()).encode(cipher.doFinal(data.getBytes()));
+            encryptedData = Base64.getEncoder().encodeToString(cipher.doFinal(data.getBytes()));
             return encryptedData;
         } catch (Exception var8) {
             throw new RuntimeException("加密错误，错误信息：", var8);
@@ -33,7 +32,7 @@ public class DESUtils {
     }
 
     protected static String decrypt(String cryptData, String key) {
-        String decryptedData = null;
+        String decryptedData ;
 
         try {
             SecureRandom sr = new SecureRandom();
@@ -42,7 +41,7 @@ public class DESUtils {
             SecretKey secretKey = keyFactory.generateSecret(deskey);
             Cipher cipher = Cipher.getInstance("DES");
             cipher.init(2, secretKey, sr);
-            decryptedData = new String(cipher.doFinal((new BASE64Decoder()).decodeBuffer(cryptData)));
+            decryptedData = new String(cipher.doFinal(Base64.getDecoder().decode(cryptData)));
             return decryptedData;
         } catch (Exception var8) {
             throw new RuntimeException("解密错误，错误信息：", var8);
